--- a/Matrix/bin/.gitignore
+++ b/Matrix/bin/.gitignore
@@ -3,3 +3,9 @@
 /OldMatrix.class
 /ProgramWithIO.class
 /UserMatrix.class
+/Set3aTest.class
+/SetTest.class
+/OldMatrixTest.class
+/MatrixTest.class
+/Matrix2Test.class
+/MatrixTest2.class
