--- a/Matrix/bin/.gitignore
+++ b/Matrix/bin/.gitignore
@@ -1,11 +1,7 @@
-/components/
-/Matrix2.class
-/OldMatrix.class
-/ProgramWithIO.class
-/UserMatrix.class
-/Set3aTest.class
-/SetTest.class
-/OldMatrixTest.class
-/MatrixTest.class
 /Matrix2Test.class
-/MatrixTest2.class
+/MatrixTest.class
+/OldMatrix.class
+/OldMatrixTest.class
+/SystemOfEquationSolver.class
+/UserMatrix.class
+/components/
