Major updates, remove setrows and setcolumns

--- a/Matrix/bin/.gitignore
+++ b/Matrix/bin/.gitignore
@@ -6,3 +6,8 @@
 /SystemOfEquationSolver.class
 /UserMatrix.class
 /components/
+/UserMatrix$Kind.class
+/ProgramWithIO.class
+/VariableParser.class
+/variableKind.class
+/UserMatrix$Linear.class
